bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_multiple_renames.stderr
error: Invalid attribute: Duplicate attribute
  --> tests/pezpallet_ui/storage_multiple_renames.rs:37:3
   |
37 |     #[pezpallet::storage_prefix = "Baz"]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
